[package]
name = "nblock"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/nblock"
description = "Non-Blocking Runtime"
keywords = ["nonblocking", "runtime"]
categories = ["concurrency","rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
crossbeam-queue = "0.3.11"
crossbeam-utils = "0.8.20"
once_cell = "1.19.0"
regex = "1.10.4"
spinning_top = "0.3.0"
